--- a/App/src/main/res/layout/activity_event_details.xml
+++ b/App/src/main/res/layout/activity_event_details.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F0EFF4"
     android:paddingRight="1dp"
     android:paddingTop="1dp"
     android:paddingBottom="1dp"
@@ -36,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Nome Evento"
+                android:fontFamily="sans-serif-light"
                 android:id="@+id/event_name" />
 
             <LinearLayout
@@ -54,6 +56,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Data e ora"
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/date_time"
                         android:layout_weight="1" />
 
@@ -62,6 +65,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Luogo"
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/place"
                         android:layout_weight="1" />
 
@@ -70,6 +74,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Organizzatore"
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/organizer"
                         android:layout_weight="1" />
 
@@ -78,17 +83,9 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="URL"
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/url"
                         android:layout_weight="1" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="2">
-
-
                 </LinearLayout>
 
             </LinearLayout>
