--- a/App/src/main/res/layout/fragment_home.xml
+++ b/App/src/main/res/layout/fragment_home.xml
@@ -10,77 +10,71 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <RelativeLayout
-        android:id="@+id/mLlayoutBottomButtons1"
+        android:id="@+id/infoLocation"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="85dp"
         android:layout_alignParentTop="true"
+        android:background="#ffffff"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/mLlayoutBottomButtons2"
+        <TextView
+            android:id="@+id/locality"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_margin="15dp"
-            android:background="#66ffffff"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:text="Milano"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-            <TextView
-                android:id="@+id/locality"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_margin="10dp"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"
-                android:text="Milano"
-                android:textSize="60sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/country"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:text="Italy"
+            android:textSize="35dp"
+            android:paddingLeft="15dp"
+            android:layout_alignBottom="@+id/locality"
+            android:layout_toRightOf="@+id/locality" />
 
-            <TextView
-                android:id="@+id/country"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="10dp"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"
-                android:text="Italy"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/temperature"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_margin="10dp"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"
-                android:text="30°C"
-                android:textSize="20dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/right"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_margin="15dp"
-            android:background="#66ffffff"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/weatherIcon"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_alignBottom="@+id/mLlayoutBottomButtons2"
-                android:layout_alignParentRight="true"
-                android:layout_alignTop="@+id/mLlayoutBottomButtons2"
-                android:layout_toRightOf="@+id/mLlayoutBottomButtons2" />
-        </LinearLayout>
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/infoWeather"
+        android:layout_width="fill_parent"
+        android:layout_height="120dp"
+        android:background="#ffffff"
+        android:orientation="horizontal"
+        android:layout_below="@+id/infoLocation"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:id="@+id/weatherIcon"
+            android:layout_width="120dp"
+            android:layout_height="150dp"
+            android:layout_alignParentLeft="true"/>
+
+        <TextView
+            android:id="@+id/temperature"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:text="30°C"
+            android:textSize="100dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+
+    </RelativeLayout>
+
+
 
     <ProgressBar
         android:id="@+id/pbHeaderProgress"
@@ -89,5 +83,15 @@
         android:layout_alignParentEnd="false"
         android:layout_alignParentStart="false"
         android:layout_centerInParent="true"></ProgressBar>
+
+    <ListView
+        android:id="@+id/listEventsActivated"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/infoWeather"
+        android:dividerHeight="5.0sp"
+        android:paddingTop="20dp"></ListView>
 
 </RelativeLayout>
