--- a/App/src/main/res/layout/activity_account_manager.xml
+++ b/App/src/main/res/layout/activity_account_manager.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F0EFF4"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -36,6 +37,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/account_text"
         android:id="@+id/textView"
+        android:fontFamily="sans-serif-light"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="47dp" />
