--- a/App/src/main/res/layout/activity_event_details.xml
+++ b/App/src/main/res/layout/activity_event_details.xml
@@ -30,7 +30,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="bottom"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:layout_margin="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -49,7 +50,8 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginTop="5dp">
 
                     <TextView
                         android:layout_width="wrap_content"
