--- a/App/src/main/res/layout/activity_alarm_ring.xml
+++ b/App/src/main/res/layout/activity_alarm_ring.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:layout_width="fill_parent"
+        android:id="@+id/text"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
